<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    tools:context=".ActivityAbout">

    <TextView
        android:id="@+id/about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="@string/about_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/border7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/about_app"
        android:layout_marginTop="10sp"
        android:background="#00C8FF" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageLogo"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="120sp"
        android:src="@mipmap/icon_round"
        app:civ_border_color="@color/white"
        app:civ_border_width="0dp" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:layout_below="@id/imageLogo"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_text"
        android:layout_marginTop="10sp"
        android:text="@string/app_description"
        android:layout_marginHorizontal="30sp"
        android:textAlignment="center"
        android:textColor="@color/white"
    />

    <TextView
        android:id="@+id/weather_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginTop="10sp"
        android:linksClickable="true"
        android:text="@string/weather_channel"
        android:textAlignment="center"
        android:layout_marginHorizontal="50sp"
        android:textColorLink="@color/blue"/>

    <ImageButton
        android:id="@+id/button_gomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0sp"
        android:layout_marginTop="0sp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_cross"
        app:tint="#F8F5F5" />

</RelativeLayout>